--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,14 @@ docs/_build/
 
 # PyBuilder
 target/
+
+#Virtual Envs
+.env
+
+#vim
+[._]*.s[a-w][a-z]
+[._]s[a-w][a-z]
+*.un~
+Session.vim
+.netrwhist
+*~
