--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ python:
     - "3.4"
 # command to install dependencies
 install: "pip install -r requirements.txt"
-script: nosetest
+script: nosetests
